Remove references to cereal example

--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cereal</title>
-    <link rel="stylesheet" href="/css/style.css">
+	<title>Flight Data</title>
+    <link rel="stylesheet" href="/public/css/foundation.css">
 </head>
 <body>
     <div id="content">
@@ -14,7 +14,7 @@
         <table>
             <thead>
                 <tr>
-                    <th class="cereal_title">Cereal</th>
+                    <th class="flight_title">Flights</th>
                     <th>Date</th>
                     <th>Origin</th>
                     <th>Destination</th>
@@ -26,7 +26,7 @@
                 </tr>
             </thead>
             <tbody>
-                %%CEREAL_INFO%%
+                %%FLIGHT_INFO%%
             </tbody>
         </table>
 </body>
