adds the ability to search by year, origin, destination

--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div id="content">
-        <img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" />
+        <!-- <img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" /> -->
         <h1 id="manufacturer_name">%%TOPIC%%</h1>
         <div class="clear"></div>
         <table>
             <thead>
                 <tr>
-                    <th class="flight_title">Flights</th>
+                    <!-- <th class="flight_title">Flights</th> -->
                     <th>Date</th>
                     <th>Origin</th>
                     <th>Destination</th>
@@ -22,7 +22,6 @@
                     <th>Seats</th>
                     <th>Passenger Count</th>
                     <th>Distance</th>
-                    <th>Dest Pop.</th>
                 </tr>
             </thead>
             <tbody>
