--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Flight Data</title>
-    <link rel="stylesheet" href="/public/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="/css/foundation.css">
 </head>
 <body>
     <div id="content">
