--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" type="text/css" href="/css/foundation.css">
 </head>
 <body>
+    <div class="grid-container">
+        <div style = "text-align: center;" class="grid-x grid-padding-x show-for-medium ">
+            <div class="cell medium-4" style="background-color: #000000;"> <a href="/year/2000" style = "color: white; font-size: 1.6rem;">Year</a> </div>
+            <div class="cell medium-4" style="background-color: #000000;"> <a href="/dest/RDM " style = "color: white; font-size: 1.6rem;">Destination</a> </div>
+            <div class="cell medium-4" style="background-color: #000000;"> <a href="/orig/LAX" style = "color: white; font-size: 1.6rem;">Origin</a> </div>
+        </div>
+
+    </div>
+
     <div id="content">
         <!-- <img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" /> -->
         <h1 id="manufacturer_name">%%TOPIC%%</h1>
