Add next and previous buttons for Year path with wrapping

--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -34,6 +34,13 @@
                     </table>
                 </div>
             </div>
+
+            <div class="cell small-6">
+                <a href=%%PREV%% class="button" style="float: left;">Previous</a>
+            </div>
+            <div class="cell small-6">
+                <a href=%%NEXT%% class="button" style="float: right;">Next</a>
+            </div>
         </div>
 
     </div>
