--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Flight Data</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flight Data</title>
     <link rel="stylesheet" type="text/css" href="/css/foundation.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
+
 <body>
     <div class="grid-container">
-        <div style = "text-align: center;" class="grid-x grid-padding-x show-for-medium ">
-            <div class="cell small-4" style="background-color: #000000;"> <a href="/year/2000" style = "color: white; font-size: 1.6rem;">Year</a> </div>
-            <div class="cell small-4" style="background-color: #000000;"> <a href="/dest/RDM " style = "color: white; font-size: 1.6rem;">Destination</a> </div>
-            <div class="cell small-4" style="background-color: #000000;"> <a href="/orig/LAX" style = "color: white; font-size: 1.6rem;">Origin</a> </div>
-            <div class="cell small-12"> 
+        <div style="text-align: center;" class="grid-x grid-padding-x show-for-medium ">
+            <div class="cell small-4" style="background-color: #000000;"> <a href="/year/2000"
+                    style="color: white; font-size: 1.6rem;">Year</a> </div>
+            <div class="cell small-4" style="background-color: #000000;"> <a href="/dest/RDM "
+                    style="color: white; font-size: 1.6rem;">Destination</a> </div>
+            <div class="cell small-4" style="background-color: #000000;"> <a href="/orig/LAX"
+                    style="color: white; font-size: 1.6rem;">Origin</a> </div>
+            <div class="cell small-12">
                 <div id="content">
                     <h1 id="manufacturer_name">%%TOPIC%%</h1>
                     <div class="clear"></div>
@@ -43,7 +49,47 @@
             </div>
         </div>
 
+        <canvas id="myChart" width="400" height="400"></canvas>
+
+        <script>
+            const ctx = document.getElementById('myChart').getContext('2d');
+            const myChart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                    datasets: [{
+                        label: '# of Votes',
+                        data: [12, 19, 3, 5, 2, 3],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 206, 86, 0.2)',
+                            'rgba(75, 192, 192, 0.2)',
+                            'rgba(153, 102, 255, 0.2)',
+                            'rgba(255, 159, 64, 0.2)'
+                        ],
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+            </script>
     </div>
 
 </body>
+
 </html>
