--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -7,7 +7,7 @@
     <title>Flight Data</title>
     <link rel="stylesheet" type="text/css" href="/css/foundation.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
 </head>
 
 <body>
@@ -51,9 +51,8 @@
                 <a href=%%NEXT%% class="button" style="float: right;">Next</a>
             </div>
         </div>
-
+        <!--
         <canvas id="myChart" width="400" height="400"></canvas>
-
         <script>
             const ctx = document.getElementById('myChart').getContext('2d');
             const myChart = new Chart(ctx, {
@@ -90,7 +89,7 @@
                     }
                 }
             });
-            </script>
+            </script> -->
     </div>
 
    
